修改了界面，增加了grok4.20的支持

--- a/app/static/common/html/footer.html
+++ b/app/static/common/html/footer.html
@@ -1,8 +1,8 @@
 <footer class="app-footer">
   <div class="max-w-5xl mx-auto px-6">
-    <a href="https://github.com/chenyme/grok2api" target="_blank" rel="noopener">Grok2API</a>
-    <span> Created By </span>
-    <a href="https://github.com/chenyme" target="_blank" rel="noopener">@Chenyme</a>
+    <a href="https://github.com/han-cczu/grok2api" target="_blank" rel="noopener">Grok2API</a>
+    <span>@</span>
+    <a href="https://github.com/han-cczu" target="_blank" rel="noopener">han-cczu</a>
     <span> &copy; 2026</span>
   </div>
 </footer>
