--- a/app/static/common/html/header.html
+++ b/app/static/common/html/header.html
@@ -2,7 +2,7 @@
   <div class="max-w-5xl mx-auto px-6 h-14 flex items-center justify-between">
     <div class="flex items-center gap-6">
       <div class="flex items-center gap-2">
-        <a href="https://github.com/chenyme/grok2api" target="_blank" rel="noopener"
+        <a href="https://github.com/han-cczu/grok2api" target="_blank" rel="noopener"
           class="brand-link font-semibold tracking-tight hover:text-black">
           <svg class="github-icon" viewBox="0 0 24 24" aria-hidden="true">
             <path
@@ -10,8 +10,8 @@
           </svg>
           <span>Grok2API</span>
         </a>
-        <a href="https://github.com/chenyme" target="_blank" rel="noopener"
-          class="text-xs text-[var(--accents-4)] hover:text-black">@chenyme</a>
+        <a href="https://github.com/han-cczu" target="_blank" rel="noopener"
+          class="text-xs text-[var(--accents-4)] hover:text-black">@han-cczu</a>
       </div>
       <div class="h-4 w-px bg-[var(--border)]"></div>
       <a href="/admin/token" class="nav-link text-sm" data-nav="/admin/token">Token管理</a>
@@ -20,7 +20,7 @@
     </div>
     <div class="nav-actions">
       <button id="storage-mode-btn" type="button" class="nav-action-btn" title="存储模式">-</button>
-      <a href="https://github.com/chenyme/grok2api/issues" target="_blank" rel="noopener"
+      <a href="https://github.com/han-cczu/grok2api/issues" target="_blank" rel="noopener"
         class="nav-action-btn">反馈</a>
       <button onclick="logout()" type="button" class="nav-action-btn">退出</button>
     </div>
