--- a/app/static/common/html/public-header.html
+++ b/app/static/common/html/public-header.html
@@ -2,7 +2,7 @@
   <div class="max-w-5xl mx-auto px-6 h-14 flex items-center justify-between">
     <div class="flex items-center gap-6">
       <div class="flex items-center gap-2">
-        <a href="https://github.com/chenyme/grok2api" target="_blank" rel="noopener"
+        <a href="https://github.com/han-cczu/grok2api" target="_blank" rel="noopener"
           class="brand-link font-semibold tracking-tight hover:text-black">
           <svg class="github-icon" viewBox="0 0 24 24" aria-hidden="true">
             <path
@@ -10,10 +10,11 @@
           </svg>
           <span>Grok2API</span>
         </a>
-        <a href="https://github.com/chenyme" target="_blank" rel="noopener"
-          class="text-xs text-[var(--accents-4)] hover:text-black">@chenyme</a>
+        <a href="https://github.com/han-cczu" target="_blank" rel="noopener"
+          class="text-xs text-[var(--accents-4)] hover:text-black">@han-cczu</a>
       </div>
       <div class="h-4 w-px bg-[var(--border)]"></div>
+      <a href="/chat" class="nav-link text-sm" data-nav="/chat">Chat 对话</a>
       <a href="/imagine" class="nav-link text-sm" data-nav="/imagine">Imagine 瀑布流</a>
       <a href="/video" class="nav-link text-sm" data-nav="/video">Video 视频生成</a>
       <a href="/voice" class="nav-link text-sm" data-nav="/voice">LiveKit 陪聊</a>
