新增功能：集成 FFmpeg 的视频编辑功能
- 引入 FFmpeg WASM 实现视频处理功能。

- 实现视频片段管理工作台，包括添加、删除和重新排序片段。

- 添加了视频上传、剪辑和导出的用户界面组件。

- 创建了视频编辑器界面的 HTML 结构。

- 实现了缩略图生成和视频时长获取功能。

- 添加了用户交互和片段管理的事件监听器。

--- a/app/static/common/html/public-header.html
+++ b/app/static/common/html/public-header.html
@@ -16,6 +16,7 @@
       <div class="h-4 w-px bg-[var(--border)]"></div>
       <a href="/chat" class="nav-link text-sm" data-nav="/chat">Chat 对话</a>
       <a href="/imagine" class="nav-link text-sm" data-nav="/imagine">Imagine 瀑布流</a>
+      <a href="/editor" class="nav-link text-sm" data-nav="/editor">Image 图片编辑</a>
       <a href="/video" class="nav-link text-sm" data-nav="/video">Video 视频生成</a>
       <a href="/voice" class="nav-link text-sm" data-nav="/voice">LiveKit 陪聊</a>
     </div>
